# ros2_body_pose

./: CMakeLists.txt  README.md  package.xml
config/: body_pose.yaml  yolov8_pose.yaml
include/body_pose/: detection_utils.h  image_utils.h
launch/: body_pose.launch.py
msg/: BodyPose.msg  BodyPoseArray.msg  KeyPoint.msg
src/: body_pose_node.cpp  detection_utils.cpp  image_utils.cpp
